Controller corregido - json adaptado

--- a/reservas/src/main/resources/application.properties
+++ b/reservas/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/reservas?serverTimezone=UTC
 spring.datasource.username=taes
 spring.datasource.password=password
+Content-Type: application/json
+Accept: application/json
 
